--- a/index.html
+++ b/index.html
@@ -27,56 +27,66 @@
             </ul>
         </section>
     </header>
-    <div class="hero"></div>
-    <content>
-        <section id="About-Me" class="content-info">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <main>
+        <section id="About-Me" class="main-info">
+            <img src="https://via.placeholder.com/150" alt="placeholder for actual picture" class="float-left" />
             <h2>About Me</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
         </section>
-        <section id="Projects" class="content-info">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <section id="Projects" class="main-info">
             <h2>Projects</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+            <ul>
+                <li>
+                    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </li>
+                <li>
+                    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </li>
+                <li>
+                    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </li>
+                <li>
+                    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </li>
+                <li>
+                    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </li>
+            </ul>
         </section>
-        <!-- <section id="Resume" class="content-info">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <!-- <section id="Resume" class="main-info">
             <h2>Resume</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
         </section> -->
-    </content>
-    <main id="Contact-Me" class="benefits">
-        <section class="benefit-info">
+    </main>
+    <content id="Contact-Me" class="contact">
+        <section class="contact-info">
             <h2>Contact Me</h2>
             <p>
-                -----------------------------------------
+                ---------------------------------------
             </p>
         </section>
-        <section class="benefit-info">
+        <section class="contact-info">
             <h3>Phone Numer</h3>
             <p>
                 555-555-5555
             </p>
         </section>
-        <section class="benefit-info">
+        <section class="contact-info">
             <h3>Email Adress</h3>
             <p>
                 aleramirez201@gmail.com
             </p>
         </section>
-        <section class="benefit-info">
+        <section class="contact-info">
             <h3>GitHub</h3>
             <p>
-                <p><a href="https://github.com/Alexander-Ramirez" target="_blank" rel="noopener noreferrer">https://github.com/Alexander-Ramirez</a></p>
+                https://github.com/Alexander-Ramirez
             </p>
         </section>
-    </main>
+    </content>
 </body>
-
 </html>
